feat(): update task project id

--- a/apps/mix-cms/src/app/pages/auth/login/login.component.scss
+++ b/apps/mix-cms/src/app/pages/auth/login/login.component.scss
@@ -36,5 +36,6 @@
     background-color: var(--background-color-primary);
     border-radius: 12px;
     border: 1px solid var(--border-color-default);
+    box-shadow: #32325d40 0 6px 12px -2px, #0000004d 0 3px 7px -3px;
   }
 }
