--- a/libs/mix-share/src/modules/task-manage/task-manage.component.scss
+++ b/libs/mix-share/src/modules/task-manage/task-manage.component.scss
@@ -24,3 +24,10 @@
     }
   }
 }
+
+.task-detail-modal {
+  .ngneat-dialog-backdrop.ngneat-dialog-backdrop-visible {
+    align-items: flex-start;
+    padding: 48px;
+  }
+}
