--- a/libs/share-styles/src/index.scss
+++ b/libs/share-styles/src/index.scss
@@ -26,6 +26,7 @@
 @import './styles/ag-table.scss';
 @import './styles/ultilities.scss';
 @import './styles/ripple.scss';
+@import './styles/button-link.scss';
 
 * {
   box-sizing: border-box;
