--- a/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
@@ -1,43 +1,49 @@
-<div class="task-detail" [formGroup]="taskForm">
+@if (loadingState() === 'Success') {
+<div class="task-detail"
+     [formGroup]="taskForm">
   <div class="d-flex gap-2 align-items-center">
-    <img [src]="TaskTypeIconDisplay[task.type]" />
+    <img [src]="TaskTypeIconDisplay[task.type]">
     <span>{{ task.type }}-{{ task.id }}</span>
   </div>
 
   <div class="row mt-2">
     <div class="col-12 col-md-8">
+      <!-- Title -->
       <mix-inline-input formControlName="title"></mix-inline-input>
 
+      <!-- Descriotion -->
       <div class="mt-4 mb-2 text-500 text-m text-sub">Description</div>
-
-      <mix-rich-text-editor
-        class="description"
-        formControlName="description"
-      ></mix-rich-text-editor>
+      <mix-rich-text-editor class="description"
+                            [placeHolder]="
+          'Make your description even better. Type / to insert content, format and more.'
+        "
+                            formControlName="description"></mix-rich-text-editor>
 
       <div class="mt-4 mb-2 text-500 text-m text-sub">Comment(s)</div>
     </div>
 
     <div class="col-12 col-md-4">
-      <div class="mb-2 text-500 text-m text-sub">STATUS</div>
+      <!-- Status -->
+      <div class="mb-2 text-500 text-s text-sub">Status</div>
+      <mix-select [items]="statusItems"
+                  [labelProcess]="statussLabel"
+                  formControlName="taskStatus"></mix-select>
 
-      <mix-select
-        [items]="statusItems"
-        [labelProcess]="statussLabel"
-        formControlName="taskStatus"
-      ></mix-select>
-
-      <div class="mt-4 mb-2 text-500 text-m text-sub">REPORTER</div>
-
+      <!-- Reporter -->
+      <div class="mt-4 mb-2 text-500 text-s text-sub">Reporter</div>
       <mix-user-select formControlName="reporter"></mix-user-select>
 
-      <div class="mt-4 mb-2 text-500 text-m text-sub">PRORITY</div>
+      <!-- Priority -->
+      <div class="mt-4 mb-2 text-500 text-s text-sub">Priority</div>
+      <mix-select [items]="prorityItems"
+                  [labelProcess]="priorityLabel"
+                  formControlName="taskPriority"></mix-select>
 
-      <mix-select
-        [items]="prorityItems"
-        [labelProcess]="priorityLabel"
-        formControlName="taskPriority"
-      ></mix-select>
+      <!-- Due Date  -->
+      <div class="mt-4 mb-2 text-500 text-s text-sub">Add to task</div>
+      <div class="d-flex flex-wrap gap-2">
+        <start-end-date></start-end-date>
+      </div>
 
       <div class="mt-4 text-s text-sub">
         <div>
@@ -51,27 +57,7 @@
       </div>
     </div>
   </div>
-
-  <div
-    *ngIf="loadingState$ | async as state"
-    class="mt-3 gap-2 d-flex align-items-center justify-content-start"
-  >
-    <mix-button
-      type="outline"
-      [disabled]="state === 'Loading'"
-      (click)="dialogRef.close()"
-      >Close</mix-button
-    >
-
-    <mix-button
-      class="ms-auto"
-      [loading]="state === 'Loading'"
-      (click)="saveTask(false)"
-      >Save</mix-button
-    >
-
-    <mix-button [loading]="state === 'Loading'" (click)="saveTask()"
-      >Save & Close</mix-button
-    >
-  </div>
 </div>
+} @else {
+<mix-skeleton-loading [type]="'form'"></mix-skeleton-loading>
+}
