--- a/libs/share-styles/src/styles/variables.scss
+++ b/libs/share-styles/src/styles/variables.scss
@@ -55,6 +55,7 @@ html {
   --text-size-xxl: 1.5rem;
 
   --blue-02: #008aa8;
+  --ds-background-neutral-hovered: #091e4224;
 }
 
 html[mode='dark'] {
@@ -123,5 +124,7 @@ html[mode='dark'] {
     --tui-autofill: var(--tui-autofill-night);
     --tui-elevation-01: #222;
     --tui-elevation-02: #222;
+
+    --ds-background-neutral-hovered: #091e4224;
   }
 }
