--- a/libs/mix-share/src/modules/task-manage/components/task-card/task-card.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-card/task-card.component.scss
@@ -7,7 +7,7 @@
 
 .task-card {
   padding: 10px;
-  border-radius: 0.625rem;
+  border-radius: var(--element-rounded);
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.1s;
