--- a/libs/mix-share/src/modules/task-manage/components/task-create/task-create.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-create/task-create.component.html
@@ -1,4 +1,5 @@
-<div class="task-create" [formGroup]="taskForm">
+<div class="task-create"
+     [formGroup]="taskForm">
   <div class="text-l">Add New {{ parentTask ? 'Task' : 'Swimlane' }}</div>
 
   @if(parentTask) {
@@ -10,37 +11,26 @@
 
     <div class="col-6">
       <div class="mb-1 text-sub text-500">Task Priority</div>
-      <task-priority-select
-        formControlName="taskPriority"
-      ></task-priority-select>
+      <task-priority-select formControlName="taskPriority"></task-priority-select>
     </div>
   </div>
   }
 
   <div class="mt-3 mb-1 text-sub text-500">Short Summary</div>
-  <mix-input
-    formControlName="title"
-    placeHolder="Quick description about your task"
-  ></mix-input>
-
-  <div class="mt-3 mb-1 text-sub text-500">Description</div>
-  <mix-rich-text-editor formControlName="description"></mix-rich-text-editor>
+  <mix-input formControlName="title"
+             placeHolder="Quick description about your task"></mix-input>
 
   <div class="mt-3 mb-1 text-sub text-500">Reporter</div>
   <mix-user-select formControlName="reporter"></mix-user-select>
 
-  <div
-    *ngIf="loadingState$ | async as state"
-    class="mt-4 d-flex justify-content-end align-items-center gap-2"
-  >
-    <mix-button [loading]="state === 'Loading'" (click)="createTask()"
-      >Create</mix-button
-    >
-    <mix-button
-      type="outline"
-      [disabled]="state === 'Loading'"
-      (click)="dialogRef.close()"
-      >Cancel</mix-button
-    >
+  <div class="mt-3 mb-1 text-sub text-500">Description</div>
+  <mix-rich-text-editor formControlName="description"></mix-rich-text-editor>
+
+  <div class="mt-4 d-flex justify-content-end align-items-center gap-2">
+    <mix-button [loading]="loadingState() === 'Loading'"
+                (click)="createTask()">Create</mix-button>
+    <mix-button type="outline"
+                [disabled]="loadingState() === 'Loading'"
+                (click)="dialogRef.close()">Cancel</mix-button>
   </div>
 </div>
