--- a/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-detail-modal/task-detail-modal.component.html
@@ -1,63 +1,102 @@
 @if (loadingState() === 'Success') {
 <div class="task-detail"
      [formGroup]="taskForm">
-  <div class="d-flex gap-2 align-items-center">
-    <img [src]="TaskTypeIconDisplay[task.type]">
-    <span>{{ task.type }}-{{ task.id }}</span>
-  </div>
-
-  <div class="row mt-2">
-    <div class="col-12 col-md-8">
-      <!-- Title -->
-      <mix-inline-input formControlName="title"></mix-inline-input>
-
-      <!-- Descriotion -->
-      <div class="mt-4 mb-2 text-500 text-m text-sub">Description</div>
-      <mix-rich-text-editor class="description"
-                            [placeHolder]="
-          'Make your description even better. Type / to insert content, format and more.'
-        "
-                            formControlName="description"></mix-rich-text-editor>
-
-      <div class="mt-4 mb-2 text-500 text-m text-sub">Comment(s)</div>
+  <!-- Title -->
+  <div class="task-detail__title">
+    <div class="d-flex align-item-center gap-1">
+      <img [src]="TaskTypeIconDisplay[task.type]">
+      <span>{{ task.type }}-{{ task.id }}</span>
     </div>
 
-    <div class="col-12 col-md-4">
-      <!-- Status -->
-      <div class="mb-2 text-500 text-s text-sub">Status</div>
-      <mix-select [items]="statusItems"
-                  [labelProcess]="statussLabel"
-                  formControlName="taskStatus"></mix-select>
+    <mix-inline-input formControlName="title"></mix-inline-input>
 
+    <div class="w-100 mt-1 mb-1 d-flex align-items-end">
       <!-- Reporter -->
-      <div class="mt-4 mb-2 text-500 text-s text-sub">Reporter</div>
-      <mix-user-select formControlName="reporter"></mix-user-select>
-
-      <!-- Priority -->
-      <div class="mt-4 mb-2 text-500 text-s text-sub">Priority</div>
-      <mix-select [items]="prorityItems"
-                  [labelProcess]="priorityLabel"
-                  formControlName="taskPriority"></mix-select>
-
-      <!-- Due Date  -->
-      <div class="mt-4 mb-2 text-500 text-s text-sub">Add to task</div>
-      <div class="d-flex flex-wrap gap-2">
-        <start-end-date></start-end-date>
+      <div class="d-flex gap-2 align-items-center">
+        <div class="mt-2 mb-1 text-500 text-s text-sub">Reporter</div>
+        <mix-user-select class="item"
+                         [size]="'s'"
+                         formControlName="reporter"></mix-user-select>
       </div>
 
-      <div class="mt-4 text-s text-sub">
-        <div>
-          Created at
-          {{ task.createdDateTime | mixDate | date : 'dd/MM/yyyy hh:mm' }}
+      <mix-button class="ms-auto"
+                  [disabled]="disableSave()"
+                  [loading]="(loadingState$ | async) === 'Loading'"
+                  (click)="saveTask()"><span class="mix-icon">save</span>&nbsp; Save & Close</mix-button>
+    </div>
+  </div>
+
+  <div class="task-detail__main-core">
+    <div class="row">
+      <div class="col-auto">
+        <!-- Status -->
+        <div class="d-flex gap-2 align-items-center">
+          <div class="text-s text-sub label">Status:</div>
+          <mix-select class="item"
+                      [items]="statusItems"
+                      [labelProcess]="statussLabel"
+                      [size]="'s'"
+                      formControlName="taskStatus"></mix-select>
         </div>
-        <div>
-          Updated at
-          {{ task.lastModified | mixDate | date : 'dd/MM/yyyy hh:mm' || '--' }}
+
+        <!-- Priority -->
+        <div class="d-flex gap-2 align-items-center mt-2">
+          <div class="text-s text-sub label">Priority:</div>
+          <task-priority-select class="item"
+                                [size]="'s'"
+                                formControlName="taskPriority"></task-priority-select>
+        </div>
+      </div>
+
+      <div class="col-auto">
+        <!-- Story point -->
+        <div class="d-flex gap-2 align-items-center">
+          <div class="text-s text-sub label">Effort:</div>
+          <story-point-select class="item"
+                              [size]="'s'"
+                              formControlName="taskPoint"></story-point-select>
+        </div>
+      </div>
+
+      <div class="col-auto ms-auto">
+        <div class="text-xs text-sub">
+          <div>
+            Updated at
+            {{
+              task.lastModified || task.createdDateTime
+                | mixDate
+                | date : 'dd/MM/yyyy hh:mm' || '--'
+            }}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="task-detail__body">
+    <div class="row">
+      <div class="col-12 col-md-8">
+        <div class="mb-1 text-500 text-s text-sub label">Description</div>
+        <mix-rich-text-editor class="description"
+                              [placeHolder]="'Make your description even better.'"
+                              formControlName="description"></mix-rich-text-editor>
+
+        <div class="mt-4 mb-2 text-500 text-s text-sub label">
+          Discussion(s)
+        </div>
+      </div>
+
+      <div class="col-12 col-md-4">
+        <div class="mb-1 text-500 text-s text-sub label">Add to task</div>
+        <div class="d-flex flex-wrap gap-2">
+          <start-end-date></start-end-date>
         </div>
       </div>
     </div>
   </div>
 </div>
 } @else {
-<mix-skeleton-loading [type]="'form'"></mix-skeleton-loading>
+<div class="task-detail__loading">
+  <mix-skeleton-loading [type]="'form'"></mix-skeleton-loading>
+</div>
 }
