--- a/libs/mix-ui/src/rich-text-editor/rich-text-editor.component.html
+++ b/libs/mix-ui/src/rich-text-editor/rich-text-editor.component.html
@@ -21,5 +21,5 @@
 <div *ngIf="mode() === 'View'"
      class="rich-text-editor-preview"
      (click)="mode.set('Edit')">
-  <tui-editor-socket [content]="control.value"></tui-editor-socket>
+  <tui-editor-socket [content]="control.value || viewModePlaceHolder"></tui-editor-socket>
 </div>
