--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -1,33 +1,24 @@
-<div
-  class="user-navigation hoverable"
-  [tp]="userMenuTpl"
-  tpClassName="user-navigation-popup"
-  tpPlacement="bottom-end"
-  tpVariation="popper"
->
-  <tui-badge
-    class="tui-space_right-2 tui-space_bottom-2"
-    status="success"
-    value="Active"
-  ></tui-badge>
+<div class="user-navigation hoverable"
+     [tp]="userMenuTpl"
+     tpClassName="user-navigation-popup"
+     tpPlacement="bottom-end"
+     tpVariation="popper">
+  <tui-badge class="tui-space_right-2 tui-space_bottom-2"
+             status="success"
+             value="Active"></tui-badge>
 
-  <mix-user-avatar
-    *ngIf="userInfo"
-    class="ms-auto"
-    [size]="'s'"
-    [userInfo]="userInfo"
-  ></mix-user-avatar>
+  <mix-user-avatar *ngIf="userInfo"
+                   class="ms-auto"
+                   [size]="'s'"
+                   [userInfo]="userInfo"></mix-user-avatar>
 </div>
 
-<ng-template #userMenuTpl let-hide>
-  <div
-    class="d-flex w-100 p-3 gap-3 pt-0 align-items-center justify-content-start"
-  >
-    <mix-user-avatar
-      *ngIf="userInfo"
-      [size]="'xl'"
-      [userInfo]="userInfo"
-    ></mix-user-avatar>
+<ng-template #userMenuTpl
+             let-hide>
+  <div class="d-flex w-100 p-3 gap-3 pt-0 align-items-center justify-content-start">
+    <mix-user-avatar *ngIf="userInfo"
+                     [size]="'xl'"
+                     [userInfo]="userInfo"></mix-user-avatar>
 
     <div>
       <div class="text-bold text-xxl">
@@ -41,22 +32,26 @@
 
   <div class="line-break"></div>
 
-  <mix-application-list></mix-application-list>
+  <!-- Open when applications ready -->
+  <!-- <mix-application-list></mix-application-list> -->
 
   <div class="main-menu">
-    <div class="mix-menu-item" (click)="hide()">
+    <div class="mix-menu-item"
+         (click)="hide()">
       <span class="mix-icon me-3">manage_accounts</span> {{ 'Managed Account' }}
     </div>
 
     <div class="line-break"></div>
 
-    <div class="mix-menu-item" (click)="hide()">
+    <div class="mix-menu-item"
+         (click)="hide()">
       <span class="mix-icon me-3">settings</span> {{ 'Settings' }}
     </div>
 
     <div class="line-break"></div>
 
-    <div class="mix-menu-item" (click)="logout(); hide()">
+    <div class="mix-menu-item"
+         (click)="logout(); hide()">
       <span class="mix-icon me-3">logout</span> {{ 'Logout' }}
     </div>
   </div>
