--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.scss
@@ -5,11 +5,13 @@
 
   &__tree {
     width: 255px;
-    height: calc(100% - 4px);
+    height: calc(100% - 8px);
     background-color: var(--background-color-primary);
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     overflow: auto;
     margin-right: -4px;
+    margin-top: 4px;
+    border: 1px solid var(--tui-base-04);
   }
 }
