--- a/libs/share-styles/src/styles/shares/page-detail.scss
+++ b/libs/share-styles/src/styles/shares/page-detail.scss
@@ -4,8 +4,6 @@
   position: relative;
   --wallpaper-height: 300px;
   background-color: var(--background-color-primary);
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
   border: 1px solid var(--border-color-default);
   overflow: hidden;
 
@@ -106,6 +104,8 @@
     flex-direction: column;
     height: 100%;
     box-shadow: 0px 4px 22px 0px #00000033;
+    border: 1px solid var(--tui-base-04);
+    // overflow: hidden;
   }
 
   &__content {
