--- a/libs/share-styles/src/styles/shares/page-list.scss
+++ b/libs/share-styles/src/styles/shares/page-list.scss
@@ -48,6 +48,9 @@
   &__action-bar {
     min-width: 55px;
     max-width: 55px;
+    border: 1px solid var(--tui-base-04);
+    height: calc(100% - 8px);
+    margin-top: 4px;
   }
 
   &__sub-toolbar {
@@ -80,7 +83,7 @@
     background-color: var(--background-color-primary);
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    border: 1px solid var(--border-color-default);
+    border: 1px solid var(--tui-base-04);
     overflow: hidden;
     flex-grow: 1;
     z-index: 1;
