feat(): update db context

--- a/libs/share-styles/src/styles/variables.scss
+++ b/libs/share-styles/src/styles/variables.scss
@@ -56,6 +56,17 @@ html {
 
   --blue-02: #008aa8;
   --ds-background-neutral-hovered: #091e4224;
+
+  --electric-violet: oklch(53.18% 0.28 296.97);
+  --french-violet: oklch(47.66% 0.246 305.88);
+  --vivid-pink: oklch(69.02% 0.277 332.77);
+  --orange-red: oklch(63.32% 0.24 31.68);
+  --red-to-pink-to-purple-horizontal-gradient: linear-gradient(
+    90deg,
+    var(--orange-red) 0%,
+    var(--vivid-pink) 50%,
+    var(--electric-violet) 100%
+  );
 }
 
 html[mode='dark'] {
