--- a/libs/mix-ui/src/text-area/text-area.component.html
+++ b/libs/mix-ui/src/text-area/text-area.component.html
@@ -1,5 +1,5 @@
-<tui-text-area [expandable]="true"
-               [formControl]="control"
-               [tuiTextfieldLabelOutside]="true">
+<tui-textarea [expandable]="true"
+              [formControl]="control"
+              [tuiTextfieldLabelOutside]="true">
   {{ placeHolder }}
-</tui-text-area>
+</tui-textarea>
