--- a/libs/mix-share/src/components/entity-form/entity-form.component.html
+++ b/libs/mix-share/src/components/entity-form/entity-form.component.html
@@ -56,64 +56,72 @@
 
 <ng-template #template
              let-observer>
-  <nav [(activeItemIndex)]="activeTabIndex"
-       tuiTabs>
-    <button tuiTab>
-      <span class="material-symbols-outlined"> feed </span>&nbsp; General
-    </button>
-    <button tuiTab>
-      <span class="material-symbols-outlined"> settings </span>&nbsp; Default
-      Value
-    </button>
-  </nav>
+  <div class="mix-dialog --default-padding">
+    <div class="mix-dialog__header">Config Entity</div>
 
-  <div class="mt-8"
-       [formGroup]="configurationForm">
-    <ng-container *ngIf="activeTabIndex === 0">
-      <mix-toggle class="mt-2"
-                  formControlName="isEncrypt">
-        Encrypt this field</mix-toggle>
-      <mix-toggle class="mt-2"
-                  formControlName="isRequire">
-        Mark this field as required</mix-toggle>
-    </ng-container>
+    <div class="mix-dialog__content">
+      <nav [(activeItemIndex)]="activeTabIndex"
+           tuiTabs>
+        <button tuiTab>
+          <span class="material-symbols-outlined"> feed </span>&nbsp; General
+        </button>
+        <button tuiTab>
+          <span class="material-symbols-outlined"> settings </span>&nbsp;
+          Default Value
+        </button>
+      </nav>
+
+      <div class="mt-8"
+           [formGroup]="configurationForm">
+        <ng-container *ngIf="activeTabIndex === 0">
+          <mix-toggle class="mt-2"
+                      formControlName="isEncrypt">
+            Encrypt this field</mix-toggle>
+          <mix-toggle class="mt-2"
+                      formControlName="isRequire">
+            Mark this field as required</mix-toggle>
+        </ng-container>
+      </div>
+    </div>
   </div>
 </ng-template>
 
 <ng-template #dataTypePicker
              let-ref>
-  <div class="mix-dialog__header">Choose data type</div>
-  <div class="data-type-picker-dialog-container">
-    <ng-container *ngFor="let group of dataTypeGroups">
-      <div class="row mb-3"
-           [formGroup]="form">
-        <div class="col-12">
-          <div class="text-l mb-2 text-500">{{ group.label }}</div>
-        </div>
-        <div *ngFor="let dataType of group.types"
-             class="col-12 col-md-6">
-          <tui-radio-block class="mb-2 data-type-card"
-                           [item]="dataType.value"
-                           formControlName="dataType"
-                           contentAlign="left"
-                           size="l">
-            <div class="inner">
-              <span class="header"><span class="mix-icon">{{ dataType.icon }}</span>
-                {{ dataType.name }}</span>
+  <div class="mix-dialog --default-padding">
+    <div class="mix-dialog__header">Choose data type</div>
+    <div class="data-type-picker-dialog-container">
+      <ng-container *ngFor="let group of dataTypeGroups">
+        <div class="row mb-3"
+             [formGroup]="form">
+          <div class="col-12">
+            <div class="text-l mb-2 text-500">{{ group.label }}</div>
+          </div>
+          <div *ngFor="let dataType of group.types"
+               class="col-12 col-md-6">
+            <tui-radio-block class="mb-2 data-type-card"
+                             [item]="dataType.value"
+                             formControlName="dataType"
+                             contentAlign="left"
+                             size="l">
+              <div class="inner">
+                <span class="header"><span class="mix-icon">{{ dataType.icon }}</span>
+                  {{ dataType.name }}</span>
 
-              <div class="text-sub text-s mt-2">
-                {{
-                  dataType.description ||
-                    'Lorem ipsum dolor sit amet, consectetur adipisicing elit?'
-                }}
+                <div class="text-sub text-s mt-2">
+                  {{
+                    dataType.description ||
+                      'Lorem ipsum dolor sit amet, consectetur adipisicing elit?'
+                  }}
+                </div>
               </div>
-            </div>
-          </tui-radio-block>
+            </tui-radio-block>
+          </div>
         </div>
-      </div>
-    </ng-container>
-  </div>
-  <div class="mix-dialog__footer">
-    <mix-button (click)="ref.close()">Ok</mix-button>
+      </ng-container>
+    </div>
+    <div class="mix-dialog__footer">
+      <mix-button (click)="ref.close()">Ok</mix-button>
+    </div>
   </div>
 </ng-template>
