--- a/apps/mix-cms/src/app/pages/portal/database/components/db-context-form/db-context-form.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/components/db-context-form/db-context-form.component.html
@@ -7,7 +7,13 @@
     <mix-input formControlName="displayName"></mix-input>
 
     <div class="text-sub mt-3 mb-1 text-500">System Name</div>
-    <mix-input formControlName="systemName"></mix-input>
+    <div class="d-flex gap-1">
+      <mix-input formControlName="systemName"></mix-input>
+      <mix-button type="outline"
+                  [iconBtn]="true"
+                  (click)="updateSystemName(true)"
+                  size="m"><span class="mix-icon">refresh</span></mix-button>
+    </div>
 
     <div class="text-sub mt-3 mb-1 text-500">Schema</div>
     <mix-input formControlName="schema"></mix-input>
